syntax = "proto3";

package server;
option go_package = "./;serverpb";

import "google/protobuf/timestamp.proto";

service MonitoringService {
  rpc GetMetrics(GetMetricsRequest) returns (stream Snapshot);
}

message GetMetricsRequest {
  uint32 periodSec = 1;
  uint32 rangeSec = 2;
}

message Snapshot {
  LAMessage la = 1;
  CpuMessage cpu = 2;
  google.protobuf.Timestamp time = 3;
}

message LAMessage {
  float perMinute = 1;
  float per5Minutes = 2;
  float per15Minutes = 3;
}

message CpuMessage {
  float usr = 1;
  float sys = 2;
  float idle = 3;
}